--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URL = mongodb://0.0.0.0:27017/restApi
+MONGODB_URL=mongodb+srv://nitinmaurya969543:zNftyElOcThSx2se@cluster0.msqi31r.mongodb.net/?retryWrites=true&w=majority
+password=zNftyElOcThSx2se
+
